--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "jsx --harmony src/ lib/"
+    "prepublish":  "jsx --harmony src/ lib/"
   },
   "author": "James Friend <james@jsdf.co>",
   "license": "MIT",
