--- a/package.json
+++ b/package.json
@@ -5,18 +5,25 @@
   "main": "./lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepublish": "jsx --harmony src/ lib/"
+    "prepublish": "./build.sh"
   },
   "author": "James Friend <james@jsdf.co>",
   "license": "MIT",
+  "homepage": "https://github.com/jsdf/react-form-for",
+  "bugs": "https://github.com/jsdf/react-form-for/issues",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/jsdf/react-form-for.git"
+  },
   "devDependencies": {
     "react": "^0.12.0",
-    "react-tools": "^0.12.0",
+    "react-tools": "0.11.2",
     "react-bootstrap": "^0.12.0",
     "bootstrap": "^3.3.0",
     "browserify": "^6.2.0"
   },
   "dependencies": {
-    "underscore": "^1.7.0"
+    "underscore": "^1.7.0",
+    "react-tools": "^0.11.2"
   }
 }
