--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple form builder for React in the style of Rails' form_for",
   "main": "./lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npm run prepublish && tap test",
     "prepublish": "jsx --harmony src/ lib/"
   },
   "author": "James Friend <james@jsdf.co>",
@@ -14,9 +14,13 @@
     "react-tools": "^0.12.0",
     "react-bootstrap": "^0.12.0",
     "bootstrap": "^3.3.0",
-    "browserify": "^6.2.0"
+    "tap": "^0.4.13",
+    "browserify": "^6.2.0",
+    "node-jsx": "^0.12.0"
   },
   "dependencies": {
-    "underscore": "^1.7.0"
+    "xtend": "^4.0.0",
+    "lodash.memoize": "^2.4.1",
+    "lodash.omit": "^2.4.1"
   }
 }
