--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A simple form builder for React in the style of Rails' form_for",
   "main": "./lib/index.js",
   "scripts": {
-    "test": "npm run prepublish && tap test",
-    "prepublish": "./build.sh"
+    "test": "npm run prepublish && tap test --stderr",
+    "prepublish": "jsx --harmony src/ lib/"
   },
   "author": "James Friend <james@jsdf.co>",
   "license": "MIT",
@@ -19,11 +19,11 @@
     "react": "0.12.0",
     "react-tools": "0.11.2",
     "tap": "^0.4.13",
-    "node-jsx": "0.12.0"
+    "node-jsx": "0.12.0",
+    "object.assign": "^1.0.1"
   },
   "dependencies": {
     "xtend": "^4.0.0",
-    "lodash.memoize": "^2.4.1",
-    "lodash.omit": "^2.4.1"
+    "lodash.memoize": "^2.4.1"
   }
 }
