--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
   },
   "devDependencies": {
     "react": "0.12.0",
-    "react-tools": "0.11.2",
+    "react-tools": "^0.12.0",
     "tap": "^0.4.13",
     "node-jsx": "0.12.0",
     "object.assign": "^1.0.1"
   },
   "dependencies": {
     "xtend": "^4.0.0",
-    "lodash.memoize": "^2.4.1"
+    "lodash.memoize": "^2.4.1",
+    "react-tools": "^0.12.0"
   }
 }
