--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
   },
   "dependencies": {
     "xtend": "^4.0.0",
-    "lodash.memoize": "^2.4.1",
-    "react-tools": "^0.12.0"
+    "lodash.memoize": "^2.4.1"
   }
 }
