--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "A simple form builder for React in the style of Rails' form_for",
   "main": "./lib/index.js",
   "scripts": {
-    "test": "npm run prepublish && tap test --stderr",
+    "test": "npm run prepublish && tap test --stderr && jest",
+    "jest": "jest",
+    "demo": "make demo",
+    "demo-run": "open http://0.0.0.0:8080/ && http-server example/",
     "prepublish": "jsx --harmony src/ lib/"
   },
   "author": "James Friend <james@jsdf.co>",
@@ -15,12 +18,21 @@
     "type": "git",
     "url": "git://github.com/jsdf/react-form-for.git"
   },
+  "jest": {
+    "scriptPreprocessor": "<rootDir>/jest-preprocessor.js",
+    "unmockedModulePathPatterns": [
+      "<rootDir>/node_modules"
+    ]
+  },
   "devDependencies": {
     "react": "0.12.0",
     "react-tools": "^0.12.0",
     "tap": "^0.4.13",
     "node-jsx": "0.12.0",
-    "object.assign": "^1.0.1"
+    "object.assign": "^1.0.1",
+    "jest-cli": "^0.1.18",
+    "jquery": "^2.1.1",
+    "reactify": "^0.17.0"
   },
   "dependencies": {
     "xtend": "^4.0.0",
