--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "A simple form builder for React in the style of Rails' form_for",
   "main": "./lib/index.js",
   "scripts": {
-    "test": "npm run prepublish && tap test --stderr && jest",
+    "test": "npm run prepublish && jest",
     "jest": "jest",
+    "watch": "node tasks/watch test src/ example/",
     "demo": "make demo",
     "demo-run": "open http://0.0.0.0:8080/ && http-server example/",
     "prepublish": "jsx --harmony src/ lib/"
@@ -27,12 +28,12 @@
   "devDependencies": {
     "react": "0.12.0",
     "react-tools": "^0.12.0",
-    "tap": "^0.4.13",
-    "node-jsx": "0.12.0",
     "object.assign": "^1.0.1",
     "jest-cli": "^0.1.18",
     "jquery": "^2.1.1",
-    "reactify": "^0.17.0"
+    "reactify": "^0.17.0",
+    "js-beautify": "^1.5.4",
+    "chokidar": "^0.11.1"
   },
   "dependencies": {
     "xtend": "^4.0.0",
