--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "demo": "make demo",
     "demo-run": "open http://0.0.0.0:8080/ && http-server example/",
     "umd": "browserify ./lib/index.js --external react --standalone ReactFormFor > dist/react-form-for.js",
+    "dist": "npm run umd && git add dist/ && git commit -m 'umd distribution rebuild' && git push origin master",
     "prepublish": "jsx --strip-types --harmony src/ lib/"
   },
   "author": "James Friend <james@jsdf.co>",
