--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,7 @@
     "James Friend <james@jsdf.co>"
   ],
   "description": "A simple form builder for React in the style of Rails' form_for",
-  "main": "dist/react-form-for.js",
+  "main": "./dist/react-form-for.js",
   "keywords": [
     "react",
     "form-builder",
@@ -19,6 +19,8 @@
     "node_modules",
     "bower_components",
     "test",
-    "tests"
+    "src",
+    "example",
+    "tasks"
   ]
 }
