--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "watch": "node tasks/watch test src/ example/",
     "demo": "make demo",
     "demo-run": "open http://0.0.0.0:8080/ && http-server example/",
-    "umd": "browserify ./lib/index.js --external react --standalone ReactFormFor > dist/react-form-for.js",
+    "umd": "browserify ./lib/index.js --external react/addons --standalone ReactFormFor > dist/react-form-for.js",
     "dist": "npm run umd && git add dist/ && git commit -m 'umd distribution rebuild' && git push origin master",
     "prepublish": "jsx --strip-types --harmony src/ lib/"
   },
