--- a/package.json
+++ b/package.json
@@ -35,12 +35,11 @@
   },
   "dependencies": {
     "xtend": "^4.0.0",
-    "lodash.memoize": "^2.4.1",
-    "react-tools": "^0.12.1"
+    "lodash.memoize": "^2.4.1"
   },
   "devDependencies": {
     "react": "0.12.0",
-    "react-tools": "^0.12.0",
+    "react-tools": "^0.12.1",
     "object.assign": "^1.0.1",
     "jest-cli": "^0.1.18",
     "jquery": "^2.1.1",
