--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "demo": "make demo",
     "demo-run": "open http://0.0.0.0:8080/ && http-server example/",
     "umd": "browserify ./lib/index.js --external react/addons --standalone ReactFormFor > dist/react-form-for.js",
-    "dist-umd": "npm run umd && git add dist/ && git commit -m 'umd distribution rebuild'",
-    "dist-bower": "node tasks/bowerversion && git add bower.json && git commit -m 'updated bower version'",
+    "dist-umd": "npm run umd; git add dist/; git commit -m 'umd distribution rebuild'",
+    "dist-bower": "node tasks/bowerversion; git add bower.json; git commit -m 'updated bower version'",
     "dist": "npm run dist-umd && npm run dist-bower && git push origin master",
     "prepublish": "jsx --strip-types --harmony src/ lib/"
   },
