--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "umd": "browserify ./lib/index.js --external react/addons --standalone ReactFormFor > dist/react-form-for.js",
     "dist-umd": "npm run umd; git add dist/; git commit -m 'umd distribution rebuild'",
     "dist-bower": "node tasks/bowerversion; git add bower.json; git commit -m 'updated bower version'",
-    "dist-version": "npm version $V; git tag -d $V; bower version $V; git push origin --tags",
+    "dist-version": "npm version $V; git tag -d v$V; bower version $V; git push origin --tags",
     "dist": "npm run dist-umd && npm run dist-bower && git push origin master",
     "prepublish": "jsx --strip-types --harmony src/ lib/"
   },
