--- a/package.json
+++ b/package.json
@@ -18,16 +18,16 @@
     "forms"
   ],
   "scripts": {
-    "test": "npm run prepublish && flow check && jest",
+    "test": "npm run prepublish && jest",
     "jest": "jest",
     "watch": "node tasks/watch test src/ example/",
-    "demo": "make demo",
+    "demo": "npm run prepublish && mkdir -p example/output/ && browserify -t [ reactify --harmony ] example/demo.js > example/output/bundle.js && cp ./node_modules/bootstrap/dist/css/bootstrap.css example/output/",
     "demo-run": "open http://0.0.0.0:8080/ && http-server example/",
     "umd": "browserify ./lib/index.js --external react/addons --standalone ReactFormFor > dist/react-form-for.js",
     "dist-umd": "npm run umd; git add dist/; git commit -m 'umd distribution rebuild'",
     "dist-version": "npm version $V; git tag -d v$V; bower version $V; git push origin --tags",
     "dist": "npm run dist-umd; echo 'version:'; read version; V=$version npm run dist-version; git push origin master",
-    "prepublish": "jsx --strip-types --harmony src/ lib/"
+    "prepublish": "babel --experimental src/ --out-dir lib/"
   },
   "jest": {
     "scriptPreprocessor": "<rootDir>/jest-preprocessor.js",
@@ -36,17 +36,20 @@
     ]
   },
   "dependencies": {
-    "xtend": "^4.0.0",
-    "lodash.memoize": "^2.4.1"
+    "classnames": "^1.1.4",
+    "lodash.memoize": "^2.4.1",
+    "standard-error": "^1.1.0",
+    "xtend": "^4.0.0"
   },
   "devDependencies": {
-    "react": "0.12.0",
-    "react-tools": "^0.12.1",
-    "object.assign": "^1.0.1",
+    "react": "^0.12.2",
+    "babel": "^4.5.4",
+    "browserify": "^4.2.3",
+    "chokidar": "^0.11.1",
     "jest-cli": "^0.1.18",
     "jquery": "^2.1.1",
-    "reactify": "^0.17.0",
     "js-beautify": "^1.5.4",
-    "chokidar": "^0.11.1"
+    "object.assign": "^1.0.1",
+    "reactify": "^0.17.0"
   }
 }
