--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-form-for",
   "version": "1.1.0",
   "description": "A simple form builder for React in the style of Rails' form_for",
-  "main": "./lib/index.js",
+  "main": "./lib/ReactFormFor.js",
   "author": "James Friend <james@jsdf.co>",
   "license": "MIT",
   "homepage": "https://github.com/jsdf/react-form-for",
@@ -35,6 +35,9 @@
       "<rootDir>/node_modules"
     ]
   },
+  "browser": {
+    "react": "./lib/util/react"
+  },
   "dependencies": {
     "classnames": "^1.1.4",
     "lodash.memoize": "^2.4.1",
@@ -42,14 +45,14 @@
     "xtend": "^4.0.0"
   },
   "devDependencies": {
-    "react": "^0.12.2",
     "babel": "^4.5.4",
-    "browserify": "^4.2.3",
+    "browserify": "^7.1.0",
     "chokidar": "^0.11.1",
     "jest-cli": "^0.1.18",
     "jquery": "^2.1.1",
     "js-beautify": "^1.5.4",
     "object.assign": "^1.0.1",
+    "react": "^0.12.2",
     "reactify": "^0.17.0"
   }
 }
