--- a/package.json
+++ b/package.json
@@ -41,10 +41,9 @@
     "./lib/util/React": "./lib/util/React-browser"
   },
   "dependencies": {
+    "babel": "^4.7.16",
     "classnames": "^1.1.4",
-    "lodash.memoize": "^2.4.1",
-    "standard-error": "^1.1.0",
-    "xtend": "^4.0.0"
+    "lodash.memoize": "^2.4.1"
   },
   "devDependencies": {
     "babel": "^4.5.4",
@@ -53,7 +52,6 @@
     "jest-cli": "^0.1.18",
     "jquery": "^2.1.1",
     "js-beautify": "^1.5.4",
-    "object.assign": "^1.0.1",
     "react": "^0.12.2",
     "reactify": "^0.17.0"
   }
